# zuffy

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
assets/: example2_fpt_787.dot
doc/: api.rst  conf.py  quick_start.rst  user_guide.rst
docs/: conf.py  index.rst  requirements.txt
docs/source/: Examples.rst  _fpt_operators.rst  _visuals_color_assignment.rst  api.rst  conf.py  fuzzy_transformer.rst  index.rst  sample1.rst  sample2.rst  samples.rst  visuals.rst  wrapper.rst  zuffy.rst  zuffy_fit_iterator.rst
examples/: README.txt  example1.py  example2.py  example3.py  example4.py  example5.py  zuffy_introduction.ipynb  zuffy_sample_1.py  zuffy_sample_2.py
fptgp/: __init__.py  _fpt_operators.py  _fptgp.py  functions.py  visuals.py  wrapper.py
fptgp/tests/: test_fptgp.py  test_template.py  test_visuals.py
fptgp/utils/: discovery.py
tests/: conftest.py  test_common.py  test_fpt_operators.py  test_fptgp.py  test_fuzzy_transformer.py  test_template.py  test_visuals.py  test_visuals_ca.py  test_wrapper.py  test_zuffy.py  test_zuffy_fit_iterator.py
zuffy/: .pylintrc  __init__.py  _fpt_operators.py  _visuals_color_assignment.py  _zuffy.py  functions.py  fuzzy_transformer.py  util_dt.py  visuals.py  visuals_color.py  wrapper.py  zuffy.py  zuffy_datasets.py  zuffy_fit_iterator.py  zwrapper.py
zuffy/utils/: discovery.py
