[project]
name = "zuffy"
version = "0.3"
authors = [{ name="POM", email="zuffy@mahoonium.ie" },]
description = "Zuffy is a sklearn compatible open source python library that uses GP to induce Fuzzy Pattern Trees"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
"Programming Language :: Python :: 3",
"License = 'MIT AND (Apache-2.0 OR BSD-2-Clause)'",
"Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/pxom/zuffy"
Issues = "https://github.com/pxom/zuffy/issues"